--- a/docs/style.css
+++ b/docs/style.css
@@ -1,8 +1,20 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+
 body {
   margin: 0;
+  background-color: black;
+  color: white;
+  font-family: 'Open Sans', sans-serif;
 }
 
-/* .p5Canvas {
-  width: 800px !important;
-  height: 800px !important;
-} */
+p {
+  width: 100%;
+  text-align: center;
+}
+
+.content {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-wrap:  wrap;
+}
